# test-task

./: .env.sample  .pylintrc  Dockerfile  Makefile  Readme.md  docker-compose.yaml  pyproject.toml
.github/workflows/: lint.yaml
app/: main.py
app/config/: config.py
app/db/: __init__.py  client.py  crud.py  template_match.py
app/dependencies/: __init__.py  db.py  pagination.py
app/endpoints/: __init__.py  template.py
app/schemas/: __init__.py  template.py
app/utils/: __init__.py  template_match.py
client/: main.py
test/: conftest.py
test/fixtures/: data.py
test/test_endpoints/: test_create_template.py  test_crud.py  test_delete_template.py  test_get_template.py  test_template_match.py
test/test_utils/: test_template_match_util.py
