[tool.poetry]
name = "test-task"
version = "0.1.0"
description = ""
authors = ["Alex Kovalyuk <nehochubanan@gmail.com>"]
readme = "README.md"
packages = [{include = "test_task"}]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
pytest = "^7.4.3"
pylint = "^3.0.2"
pydantic-settings = "^2.1.0"
motor = "^3.3.2"
uvicorn = "^0.24.0.post1"
pymongo = {extras = ["srv"], version = "^4.6.0"}
httpx = "^0.25.1"
pytest-asyncio = "^0.21.1"
pytest-aiohttp = "^1.0.5"
pydantic = {extras = ["email"], version = "^2.5.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
